css/style.css
/* ====================BASIC UNIVERSAL STYLING & CLEAN UP======================= */

/* div outlines */
div {
    outline:#d33571;
    outline-width: 2px;
}


/* loading fonts */   
@font-face {
    font-family: "greatwarrior";
    src: url("../fonts/Greatwarrior.ttf"); 
    /* Dibaca, Mohon. 2023. “Great Warrior”. Letterara. https://www.dafont.com/great-warrior.font?text=NECTAR+nectar&back=theme */
}


/* some basic css resetting */
body { 
    margin: 0; 
    box-sizing: border-box; 
    z-index: 5;
}
  
a { text-decoration: none; color: var(--lightcream); }
  
  
ul {
    margin: 0;
    padding: 0; 
    list-style: none;
}
  
/* ==================== NAVIGATION ======================= */
nav {
    position: sticky;
    z-index: 20;
    animation: navanimate linear;
    animation-timeline: scroll();
    padding: 0;
    width: min(1080px, 98vw);
    margin: 0 auto;
    aspect-ratio: 1080 / 160;
    background-image: url("../images/desktopNavwhite.svg");
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

.navbg {
    position:absolute;
    height:calc(var(--sectionheight)*0.05);
    width:100%;
    background-color: #0a050f;
  }

#burger, label {
    display:none;
}

nav ul {
    display: flex;
    gap: 10px;
    width: 80%;
    padding-left: 10%;
    padding-right: 10%;
    margin: 0;
    background-color: transparent;
    height: 100%;
    align-items: center;
}

nav ul li {
    flex: 1 1 auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

nav ul li a {
    color: var(--black);
    padding: 8px 0;
    border-radius: 5px;
    flex: 1 1 auto;
    text-align: center;
    z-index: 20;
    transition-duration: 0.3s;
}

nav ul li a:hover {
    background-color: var(--red);
}
  
@keyframes navanimate {
    8% {
      top:0px;
    }
    100% {
      top:0px;
    }
}


/* ==================== MAIN BODY CONTENT ======================= */

:root { /* allows me to access these variables through out the whole document */
    --sectionheight: 1152px; /* calc(768px*1.5) */
    /* 
      becuase the animation scrolling is based on percentages of the body height I decided to base the section on a specific variable
      originally it was because I thought that I couldnt use the vh in transforms (which was a problem for the parallax) but I found out afterwards that you can and
      in hindsight if I based the whole website on viewheight it would have done the same thing.
    */
    /* update from elusive james, this is fully outdated and should def remove using a section height asap */
  
    /* colour palette */
    --red: #990525; /* accent color */
    --lightcream: #ebf1e9; /* off white #f7eee9 */
    --black: #181a19; /* off black */
  
    --darkgreen25: #506b6252;       /* color-mix(in srgb, var(--darkgreen),#0000 25%); /* mixes colour to make it transparent */
    --lightblue100:  #95d4c900;     /*color-mix(in srgb, var(--lightblue), #0000 100%);*/
}

.display {
    font-family: "Helvetica";
    font-weight: bold;
    font-size: large;
    max-width: 1000px;
}

body {
    background-color: #0a050f;
}

p {
    font-family: "neulis-neue", "helvetica", sans-serif;
    font-weight: 400;
    font-style: normal;
    line-height: 1.5;
    color: white;
}

a {
    font-family: "neulis-neue", "helvetica", sans-serif;
    font-weight: 700;
    font-style: normal;
}


/* ==================== HEADER ======================= */
h1, h2, h3, h4, h5, h6 {
    font-family: "helvetica";
    font-weight: bold;
}

/* ==================== ANIMATION ======================= */

/* #region ==================== text bobbing ======================= */

@keyframes textbob { /* this is for the TITLE animation */
    0% {
      transform: translateY(7px);
    }
    50% {
      transform: translateY(-7px);
    }
    100% {
      transform: translateY(7px);
    }
}

@keyframes textbobhover {
    0% {
      transform: translateY(7px);
    }
    100% {
      transform: translateY(-28px);
    }
}


.textbob {
    counter-reset: child-counter;
}

.textbob span {
    counter-increment: child-counter;
    transform: translateY(7px); /* had to ajust starting position because the animation started at 7px it was jumping at the start */
    animation: textbob 4s infinite cubic-bezier(0.6, 0, 0.7, 1); /* the inspect tool is useful to ajust this curve */
}
/* Animation delays for each span */
/* #region for Animation Delays */
/* omg this is so useful */
.textbob span:nth-child(1) {
    animation-delay: 0s; /* I found out about the delay after I made 2 different keyframes for the waves */
}
  
.textbob span:nth-child(2) {
    animation-delay: 0.2s;
}
  
.textbob span:nth-child(3) {
    animation-delay: 0.4s;
}
  
.textbob span:nth-child(4) {
    animation-delay: 0.6s;
}
  
.textbob span:nth-child(5) {
    animation-delay: 0.8s;
}
  
.textbob span:nth-child(6) {
    animation-delay: 1s;
}
  
.textbob span:nth-child(7) {
    animation-delay: 1.2s;
}
  
.textbob span:nth-child(8) {
    animation-delay: 1.4s;
}
  
.textbob span:nth-child(9) {
    animation-delay: 1.6s;
}
  
.textbob span:nth-child(10) {
    animation-delay: 1.8s;
}

.textbob span:nth-child(11) {
    animation-delay: 2s;
}

.textbob span:nth-child(12) {
    animation-delay: 2.2s;
}

.textbob span:nth-child(13) {
    animation-delay: 2.4s;
}

.textbob span:nth-child(14) {
    animation-delay: 2.6s;
}

.textbob span:nth-child(15) {
    animation-delay: 2.8s;
}

.textbob span:nth-child(16) {
    animation-delay: 3s;
}

.textbob span:nth-child(17) {
    animation-delay: 3.2s;
}

.textbob span:nth-child(18) {
    animation-delay: 3.4s; /* I feel like this should be illegal, why cant I make a function to do this without using extra software */
}
/* ... */

